Add prepare script that is npm compatible

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jest-coverage": "jest --coverage",
     "lint": "eslint sample/ src/ test/ --ext .jsx,.js",
     "prepack": "yarn clean && yarn build",
-    "test": "yarn lint && yarn jest"
+    "test": "yarn lint && yarn jest",
+    "prepare": "npm run clean && npm run build-js && npm run copy-styles && npm run build-styles"
   },
   "jest": {
     "setupFiles": [
